# hindranch

./: .gitignore  Cargo.toml  README.md  build.rs  build_resources.sh  settings.toml
resources/: map.tmx  shotgun.toml  swat_smg.toml  topdown.tsx
resources/sound/: bulldozer2.flac
resources/voice/: build.sh  lines.toml
src/: ai.rs  characters.rs  consts.rs  enemy.rs  main.rs  music.rs  player.rs  settings.rs  sounds.rs  tile_util.rs  types.rs  voice.rs  weapon.rs
src/dead/: mod.rs
src/intro/: mod.rs
src/menu/: mod.rs
src/outro/: mod.rs
src/prepare/: mod.rs
src/round/: mod.rs
