[package]
name = "hindranch"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>", "Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
cgmath = "0.17.0"
nalgebra = "0.16.3"
#nalgebra-glm = "0.2.1"
ggez = { git = "https://github.com/ggez/ggez", rev = "9bcca91c4beda7468f294b32d0bcd25c6a25242f" }
rand = "0.6.4"
nphysics2d = "0.9"
ncollide2d = "0.17"

[build-dependencies]
restson = "0.5.1"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.37"
base64 = "0.10.1"
toml = "0.4.10"

[features]
wavenet=[]