[package]
name = "hindranch"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>", "Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
cgmath = "0.17.0"
nalgebra = "0.16.3"
#nalgebra-glm = "0.2.1"
ggez = { git = "https://github.com/gwihlidal/ggez", rev = "29a985aea6bcb62e61c823487101213b6d8eeaf5" }
rand = "0.6.4"
nphysics2d = "0.9"
ncollide2d = "0.17"
tiled = "0.8"
state_machine = "0.1.14"

[build-dependencies]
restson = "0.5.1"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.37"
base64 = "0.10.1"
toml = "0.4.10"

[features]
wavenet=[]